--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <h2>Contact Us</h2>
             <p>Get in touch with us for any questions, concerns, or feedback. We'd love to hear from you!</p>
             <ul>
-                <li><strong>Email:</strong> <a href="mailto:gizmohub@gmail.com">info@gizmohub.com</a></li>
+                <li><strong>Email:</strong> <a href="mailto:gizmohub@gmail.com">gizmohub@gmail.com</a></li>
                 <li><strong>Phone:</strong> 0912-345-678</li>
                 <li><strong>Facebook:</strong> <a href="https://www.facebook.com/gizmohub" target="_blank">GizmoHub on Facebook</a></li>
             </ul>
