--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <div class="container">
            
 
-            <h2>About Us</h2>
+            <h2>About The Website</h2>
             <p>Welcome to my online store, where I specialize in the latest gadgets and accessories. My mission is to provide you with the best products at competitive prices while delivering exceptional customer service.</p>
             <p>I believe that technology should be accessible to everyone, which is why I strive to make my products affordable and easy to use. I am dedicated to ensuring that every customer has a seamless shopping experience.</p>
             <h3>About Me</h3>
